# lodge

./: .editorconfig  .gitignore  .gitmodules  .main.c.swp  CMakeLists.txt  README  README.md  alist.c  alist.h  animatedsprites.c  animatedsprites.h  array.h  atlas.c  atlas.h  blob.c  blob.h  build_windows.bat  cmake_emscripten_mingw.bat  cmake_mingw.bat  cmake_user_copyme.txt  cmake_vs10.bat  cmake_vs12.bat  collide.c  collide.h  color.c  color.h  console.c  console.h  core.c  core.h  core_argv.c  core_argv.h  core_console.c  core_console.h  core_reload.c  core_reload.h  drawable.c  drawable.h  env.c  env.h  (+68 more)
lodge-asset-atlas/: CMakeLists.txt
lodge-asset-fbx/: CMakeLists.txt  fbx.c  fbx.h  fbx_asset.c  fbx_asset.h  lodge_res_fbx.c  lodge_res_fbx.h
lodge-asset-pyxel/: CMakeLists.txt  pyxel.c  pyxel.h  pyxel_asset.c  pyxel_asset.h
lodge-assets/: CMakeLists.txt  dummy.c  generate_assets.c  lodge_asset_id.c  lodge_asset_id.h  lodge_assets.c  lodge_assets.h  lodge_assets2.h  lodge_type_asset.h
lodge-assets/include/: lodge_asset_id.h  lodge_assets.h
lodge-assets/src/: lodge_asset_id.c  lodge_assets.c  lodge_assets2.c  lodge_type_asset.c
lodge-collections/: CMakeLists.txt  alist.c  alist.h  array.c  array.h  list.c  rqueue.c  rqueue.h  sparse_set.c  sparse_set.h
lodge-console/: CMakeLists.txt  console.c  console.h  core_console.c  core_console.h
lodge-entity/: CMakeLists.txt  lodge_camera_component.c  lodge_camera_params.h  lodge_component_type.c  lodge_component_type.h  lodge_entity.c  lodge_entity.h  lodge_entity_type.c  lodge_gui_property_widget_factory.c  lodge_gui_property_widget_factory.h  lodge_perspective.c  lodge_perspective.h  lodge_scene.c  lodge_scene.h  lodge_scene_serialize.c  lodge_scene_serialize.h  lodge_system_type.c  lodge_system_type.h  lodge_transform_component.c  lodge_transform_component.h
lodge-entity/include/: lodge_camera_component.h  lodge_component_type.h  lodge_entity_type.h  lodge_perspective.h  lodge_scene.h
lodge-entity/src/: lodge_camera_component.c  lodge_component_type.c  lodge_gui_property_widget_factory.c  lodge_scene.c  lodge_scene_serialize.c  lodge_system_type.c  lodge_transform_component.c
lodge-env/: CMakeLists.txt  env.c  env.h
lodge-fbx/: CMakeLists.txt  fbx.c  fbx.h
lodge-gfx/: CMakeLists.txt  drawable.c  drawable.h  lodge_buffer_object.h  lodge_debug_draw.c  lodge_drawable.h  lodge_framebuffer.h  lodge_gfx.h  lodge_gfx_types.h  lodge_parametric_drawable.c  lodge_parametric_drawable.h  lodge_pipeline.h  lodge_shader.h  lodge_static_mesh.c  lodge_static_mesh.h  lodge_texture.h  vertex.h  vertex_buffer.h
lodge-gfx/opengl/: lodge_buffer_object_opengl.c  lodge_drawable_opengl.c  lodge_framebuffer_opengl.c  (+4 more)
lodge-graphics/: CMakeLists.txt  drawable.c  drawable.h  graphics_types.h  vertex_buffer.h
lodge-gui/: CMakeLists.txt
lodge-image/: CMakeLists.txt  lodge_image.c  lodge_image.h  raw_image.c
lodge-intersect/: CMakeLists.txt  collide.c  intersect.c  intersect.h
lodge-lib/: CMakeLists.txt  blob.c  blob_cur.c  color.h  coordinate_systems.h  dynbuf.c  dynbuf.h  frustum.c  frustum.h  geometry.h  gruvbox.h  lodge_assert.h  lodge_hash.c  lodge_input.c  lodge_input.h  lodge_noise.h  lodge_platform.c  lodge_platform.h  lodge_properties.h  lodge_quadtree.c  lodge_time.c  lodge_time.h  lodge_type.c  lodge_type.h  lodge_variant.c  lodge_variant.h  log.h  math4.c  math4.h  membuf.c  membuf.h  str.c  str.h  strbuf.c  strbuf.h  strview.c  strview.h  txt.c  txt.h
lodge-monotext/: CMakeLists.txt  monotext.c  monotext.h
lodge-ns/: CMakeLists.txt  lodge_ns.h  lodge_ns_graph.c  lodge_ns_graph.h  lodge_ns_graph_serialize.c  lodge_ns_graph_serialize.h  lodge_ns_graph_types.h  lodge_ns_node.c  lodge_ns_node.h  lodge_ns_node_type.c  lodge_ns_node_type.h  lodge_ns_node_types_default.c  lodge_ns_node_types_default.h  lodge_ns_node_types_helpers.h
lodge-ns-editor/: CMakeLists.txt  lodge_ns_editor.c  lodge_ns_editor.h
lodge-plugin-debug-draw/: CMakeLists.txt  lodge_plugin_debug_draw.c  lodge_plugin_debug_draw.h
lodge-plugin-editor/: CMakeLists.txt  lodge_editor_controller.c  lodge_editor_controller.h  lodge_editor_entities_panel.c  lodge_editor_entities_panel.h  lodge_editor_panel.h  lodge_editor_plugins_panel.c  lodge_editor_plugins_panel.h  lodge_editor_properties_panel.c  lodge_editor_properties_panel.h  lodge_editor_scenes_panel.c  lodge_editor_scenes_panel.h  lodge_editor_selection_system.c  lodge_editor_selection_system.h  lodge_editor_systems_panel.c  lodge_editor_systems_panel.h  lodge_editor_viewport_panel.c  lodge_editor_viewport_panel.h  lodge_file_picker_widget.c  lodge_file_picker_widget.h  lodge_plugin_editor.c  lodge_plugin_editor.h  lodge_scene_editor.c  lodge_scene_editor.h  lodge_undo.c  lodge_undo.h
lodge-plugin-env/: CMakeLists.txt  env.c  env.h  lodge_plugin_env.c  lodge_plugin_env.h
lodge-plugin-fbx/: CMakeLists.txt  fbx_asset.c  fbx_asset.h  lodge_plugin_fbx.c  lodge_plugin_fbx.h
lodge-plugin-files/: CMakeLists.txt  lodge_plugin_files.c  lodge_plugin_files.h
lodge-plugin-images/: CMakeLists.txt  lodge_plugin_images.c  lodge_plugin_images.h
lodge-plugin-renderdoc/: CMakeLists.txt  lodge_plugin_renderdoc.c  lodge_plugin_renderdoc.h
lodge-plugin-scene-renderer/: CMakeLists.txt  lodge_billboard_component.c  lodge_billboard_component.h  lodge_billboard_system.c  lodge_billboard_system.h  lodge_camera_component.c  lodge_camera_component.h  lodge_directional_light_component.c  lodge_directional_light_component.h  lodge_geometry_buffer.c  lodge_geometry_buffer.h  lodge_plugin_scene_renderer.c  lodge_plugin_scene_renderer.h  lodge_point_light_component.c  lodge_point_light_component.h  lodge_post_process.c  lodge_post_process.h  lodge_shadow_map.c  lodge_shadow_map.h  lodge_static_mesh_component.c  lodge_static_mesh_component.h  lodge_tesselated_plane.c  lodge_tesselated_plane.h
lodge-plugin-scenes/: CMakeLists.txt
lodge-plugin-script/: CMakeLists.txt
lodge-plugin-shaders/: CMakeLists.txt  lodge_plugin_shader_sources.c  lodge_plugin_shader_sources.h  lodge_plugin_shaders.c  lodge_plugin_shaders.h
(+258 files in other folders)
